# reparsec

./: .readthedocs.yaml  LICENSE  README.md  bench.py  intro.md  mypy.ini  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yaml
combinators/: core.py  expr.py  json.py  lexer.py  result.py
doc/: Intro.md  Tutorial.md  intro.md
docs/: requirements.txt
docs/source/: conf.py  index.rst
docs/source/pages/: combinators.rst  layout.rst  lexer.rst  parsers.rst  tutorial.rst
reparsec/: combinators.py  core.py  expr.py  json.py  json_scannerless.py  lexer.py  output.py  parser.py  primitive.py  result.py  scannerless.py  sequence.py  state.py  yamlish.py
reparsec/impl/: combinators.py  context.py  layout.py  primitive.py  scannerless.py  sequence.py
src/reparsec/: __init__.py  chain.py  core.py  expr.py  json_scannerless.py  layout.py  lexer.py  output.py  parser.py  primitive.py  result.py  scannerless.py  sequence.py  state.py  types.py  yamlish.py
src/reparsec/core/: chain.py  combinators.py  layout.py  parser.py  primitive.py  recovery.py  repair.py  result.py  scannerless.py  sequence.py  state.py  types.py
src/reparsec/impl/: combinators.py  layout.py  primitive.py  scannerless.py  sequence.py
src/reparsec/parsers/: json.py  json_scannerless.py  yamlish.py
tests/: test_expr.py  test_json.py  test_json_scannerless.py  test_layout.py  test_parsing.py  test_recovery.py  test_tuples.py  test_validation.py  test_yamlish.py
tests/parsers/: expr.py  json.py  json_scannerless.py  yamlish.py
