[metadata]
name = reparsec
version = 0.1.0
license = MIT License
author = ethframe
description = Parser combinators library with error recovery
url = https://github.com/ethframe/reparsec

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    dataclasses
    typing-extensions

[options.packages.find]
exclude =
    tests
