[metadata]
name = reparsec
version = 0.1.0a0
license = MIT License
license_files = LICENSE
author = ethframe
description = Parser combinators library with error recovery
long_description = file: README.md
url = https://github.com/ethframe/reparsec
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Typing :: Typed

[options]
packages = find:
package_dir =
    = src
include_package_data = True
install_requires =
    dataclasses; python_version < "3.7"
    typing-extensions
zip_safe = False

[options.packages.find]
where = src
